compiler/testData/cli/jvm/internalArgCommonChecks/internalArgOverrideOffLanguageFeature.out
warning: ATTENTION!
This build uses unsafe internal compiler arguments:

-XXLanguage:-NullableNothingInReifiedPosition

This mode is not recommended for production use,
as no stability/compatibility guarantees are given on
compiler or generated code. Use it at your own risk!

compiler/testData/cli/jvm/internalArgCommonChecks/languageVersion.kt:18:5: error: cannot use 'Nothing?' as reified type parameter.
    foo(b)
    ^^^
COMPILATION_ERROR
